--- a/public/test.html
+++ b/public/test.html
@@ -16,22 +16,17 @@
       border: 1px solid lightgray;
       position: relative;
     }
-
     .vis-tooltip {
       white-space: normal !important;
       max-width: 700px !important;
       min-width: 300px;
-      max-height: none !important;
-      overflow: visible !important;
       font-size: 10px;
       line-height: 1.2;
       padding: 12px;
       background-color: #fff;
       border: 1px solid #ccc;
-      z-index: 1000;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
-
     .vis-item {
       font-size: 10px;
       padding: 1px 2px;
@@ -40,8 +35,7 @@
       border-radius: 4px;
       max-width: 300px;
     }
-
-    #event-form {
+    #event-form, #filter-window, #add-filter-window {
       position: absolute;
       top: 20px;
       left: 50%;
@@ -52,12 +46,16 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
       display: none;
       z-index: 2000;
+      max-height: 80vh;
+      overflow: auto;
     }
   </style>
 </head>
 <body>
   <h2>匿名时间轴编辑器（只读预览）</h2>
   <button onclick="document.getElementById('event-form').style.display='block'">➕ 增加事件</button>
+  <button onclick="openFilterWindow('and')">过滤标准（和逻辑）</button>
+  <button onclick="alert('暂未启用，请先使用“和逻辑”')">过滤标准（或逻辑）</button>
   <div id="timeline"></div>
 
   <div id="event-form">
@@ -76,154 +74,34 @@
     <button onclick="submitEvent()">提交</button>
     <button onclick="document.getElementById('event-form').style.display='none'">关闭</button>
   </div>
- <h2>匿名时间轴编辑器（只读预览）</h2>
-  <button onclick="document.getElementById('event-form').style.display='block'">➕ 增加事件</button>
-  <button onclick="openFilterWindow('and')">过滤标准（和逻辑）</button>
-  <button onclick="alert('暂未启用，请先使用“和逻辑”')">过滤标准（或逻辑）</button>
-  <div id="timeline"></div>
 
- 
   <div id="filter-window">
     <h3>过滤标准（和逻辑）</h3>
-    <button onclick="addFilterCriterion()">增加过滤标准</button>
+    <button onclick="openAddFilterWindow()">增加过滤标准</button>
     <button onclick="resetFilter()">复原过滤标准</button>
     <button onclick="applyFilter()">确定</button>
     <button onclick="closeFilterWindow()">关闭</button>
     <div id="filter-list"></div>
   </div>
+
+  <div id="add-filter-window">
+    <h3>新增过滤标准</h3>
+    <label>过滤属性：
+      <select id="filter-attribute">
+        <option value="EventType">事件类型</option>
+        <option value="Region">地区</option>
+        <option value="Platform">平台类型</option>
+        <option value="Company">公司</option>
+      </select>
+    </label><br>
+    <label>过滤选项：
+      <select id="filter-values" multiple></select>
+    </label><br>
+    <button onclick="confirmAddFilter()">确定</button>
+    <button onclick="closeAddFilterWindow()">取消</button>
+  </div>
+
   <script>
-    const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec";
-
-    moment.locale("zh-cn");
-
-    fetch(ENDPOINT)
-      .then(res => res.json())
-      .then(data => {
-        const items = data.map((event, index) => ({
-          id: event.id || `auto-${index + 1}`,
-          content: event.content || '(无标题)',
-          start: event.start,
-          end: event.end || null,
-          title: (event.title || '').replace(/\n/g, '<br>')
-        }));
-
-        const container = document.getElementById("timeline");
-        const timeline = new vis.Timeline(container, items, {
-          locale: "zh-cn",
-          editable: false,
-          margin: { item: 10, axis: 200 },
-          orientation: { axis: 'bottom', item: 'bottom' },
-          tooltip: { followMouse: true, overflowMethod: 'flip' },
-          verticalScroll: true,
-          zoomKey: "ctrlKey",
-          stack: true // ❖ 如需允许事件重叠，可设为 false
-        });
-      });
-
-    fetch(ENDPOINT + '?action=options')
-      .then(res => res.json())
-      .then(options => {
-        const fill = (id, list) => {
-          const select = document.getElementById(id);
-          select.innerHTML = '';
-          list.forEach(opt => {
-            const option = document.createElement("option");
-            option.value = opt;
-            option.textContent = opt;
-            select.appendChild(option);
-          });
-        };
-
-        fill("eventType", options.EventType);
-        fill("region", options.Region);
-        fill("platform", options.Platform);
-        fill("company", options.Company);
-        fill("tag", options.Tag);
-
-        new Choices(document.getElementById("tag"), {
-          removeItemButton: true,
-          placeholderValue: '请选择标签...',
-          searchPlaceholderValue: '搜索标签...',
-          noResultsText: '无匹配标签',
-          maxItemCount: 10
-        });
-
-        document.getElementById("platform").addEventListener("change", function () {
-          const platform = this.value;
-          const consoleOptions = options.ConsolePlatform?.[platform] || [];
-          const consoleSelect = document.getElementById("console");
-          consoleSelect.innerHTML = '';
-
-          if (consoleOptions.length > 0) {
-            document.getElementById("consoleLabel").style.display = 'inline';
-            consoleOptions.forEach(opt => {
-              const option = document.createElement("option");
-              option.value = opt;
-              option.textContent = opt;
-              consoleSelect.appendChild(option);
-            });
-          } else {
-            document.getElementById("consoleLabel").style.display = 'none';
-          }
-        });
-      });
-
-    function submitEvent() {
-    const title = document.getElementById("title").value.trim();
-    const start = document.getElementById("start").value;
-    const end = document.getElementById("end").value;
-    const region = document.getElementById("region").value;
-    const platform = document.getElementById("platform").value;
-    const consolePlatform = document.getElementById("console").value;
-    const eventType = document.getElementById("eventType").value;
-    const company = document.getElementById("company").value;
-    const description = document.getElementById("description").value.trim();
-    const tagList = Array.from(document.querySelector('#tag').selectedOptions).map(opt => opt.value);
-    const submitter = document.getElementById('submitter').value.trim();
-
-    if (!title || !start || !region || !eventType) {
-      alert("请填写所有必填字段！");
-      return;
-    }
-
-    if (submitter.length > 12 || /[^\u4e00-\u9fa5\w]/.test(submitter)) {
-      alert("提交者昵称仅限中文、英文、数字，最长12个字符");
-      return;
-    }
-
-    const formData = new FormData();
-    formData.append("Title", title);
-    formData.append("Start", start);
-    formData.append("End", end);
-    formData.append("Region", region);
-    formData.append("Platform", platform);
-    formData.append("ConsolePlatform", consolePlatform);
-    formData.append("EventType", eventType);
-    formData.append("Company", company);
-    formData.append("Description", description);
-    formData.append("Submitter", submitter);
-    formData.append("Tag", tagList.join(','));
-
-    // 若支持 token 可拼接 "?token=xxx"，目前为匿名
-    fetch(ENDPOINT, {
-      method: "POST",
-      body: formData
-    })
-      .then(response => response.json())
-      .then(result => {
-        if (result.success) {
-          alert("提交成功！");
-          document.getElementById('event-form').style.display = 'none';
-          location.reload();
-        } else {
-          alert("提交失败，请稍后重试。");
-        }
-      })
-      .catch(err => {
-        console.error("提交失败", err);
-        alert("提交异常，请检查网络连接。");
-      });
-  }
     function openFilterWindow(mode) {
       if (mode === 'and') {
         document.getElementById('filter-window').style.display = 'block';
@@ -232,15 +110,52 @@
     function closeFilterWindow() {
       document.getElementById('filter-window').style.display = 'none';
     }
-    function addFilterCriterion() {
-      alert('弹出新窗口设置过滤标准（开发中）');
-    }
     function resetFilter() {
       document.getElementById('filter-list').innerHTML = '';
     }
     function applyFilter() {
       alert('应用过滤逻辑（开发中）');
       closeFilterWindow();
+    }
+    function openAddFilterWindow() {
+      const attr = document.getElementById('filter-attribute');
+      const values = document.getElementById('filter-values');
+      values.innerHTML = '';
+
+      const sourceMap = {
+        EventType: ["游戏发售", "主机发售", "社会事件"],
+        Region: ["日本", "美国", "中国"],
+        Platform: ["家用机游戏", "掌机游戏", "网络游戏"],
+        Company: ["任天堂", "索尼", "Bandai/万代", "其他"]
+      };
+
+      const selectedAttr = attr.value;
+      (sourceMap[selectedAttr] || []).forEach(val => {
+        const option = document.createElement('option');
+        option.value = val;
+        option.textContent = val;
+        values.appendChild(option);
+      });
+
+      document.getElementById('add-filter-window').style.display = 'block';
+    }
+    function closeAddFilterWindow() {
+      document.getElementById('add-filter-window').style.display = 'none';
+    }
+    function confirmAddFilter() {
+      const attr = document.getElementById('filter-attribute').value;
+      const values = Array.from(document.getElementById('filter-values').selectedOptions).map(opt => opt.value);
+      const display = `${attr}：${values.join(', ')}`;
+
+      const entry = document.createElement('div');
+      entry.textContent = display + ' ';
+      const remove = document.createElement('button');
+      remove.textContent = '❌';
+      remove.onclick = () => entry.remove();
+      entry.appendChild(remove);
+      document.getElementById('filter-list').appendChild(entry);
+
+      closeAddFilterWindow();
     }
   </script>
 </body>
